@@ -13,7 +13,7 @@
 /**
  * @brief Messagelevels for log writing.
  */
-namespace LOGLEVEL
+struct LOGLEVEL
 {
 	enum 
 	{
@@ -23,7 +23,9 @@ namespace LOGLEVEL
 		LNOTICE = 0x4, /**< Important messages */
 		LMSG = 0x8, /**< Normal messages */
 		LCODEFLOW = 0x10, /**< Code flow messages */
-		LCOMPAREDATA = 0x20,
+		LCOMPAREDATA = 0x20, /**< Compare data (dump) */
+
+		/* These flags are not loglevels, but have special meaning */
 		LOSERROR = 0x1000, /**< Append description of last error */
 		LSILENTVERIFY = 0x2000, /**< No VERIFY popup, please */
 		LDEBUG = 0x4000,  /**< Append message to debug window as well */
@@ -38,8 +40,16 @@ namespace LOGLEVEL
  * needed to see all informal messages, but errors are always good
  * to log. For simpler usage, default is that all messages are written
  * and functions with take just message in are provided.
+ *
+ * Outputting messages can be limited by giving a max level for outputted
+ * messages. Only lower level messages are then outputted. For example if
+ * level is set to LERROR only error messages are outputted.
+ *
+ * Written messages are given using printf() -style messageformat specifiers.
+ * See MSDN documentation about printf() function for more information.
+ *
  * @note User can easily define more levels, just add new constant to
- * namespace LOGLEVEL above, and possibly prefix to GetPrefix(UINT level).
+ * struct LOGLEVEL above, and possibly prefix to GetPrefix(UINT level).
  */
 class CLogFile  
 {
@@ -48,7 +58,7 @@ public:
 		BOOL bDeleteExisting = FALSE);
 	virtual ~CLogFile();
 
-	CString SetFile(CString strFile, CString strPath = _T(""),
+	CString SetFile(const CString & strFile, const CString & strPath = _T(""),
 		BOOL bDelExisting = FALSE);
 	void EnableLogging(BOOL bEnable);
 	UINT GetDefaultLevel() const;
@@ -61,9 +71,6 @@ public:
 	UINT Write(UINT level, LPCTSTR pszFormat, ...);
 	UINT Write(UINT level, DWORD idFormatString, ...);
 
-	// overloaded Write Function to map to Write to Error Set code //
-	void WriteError(CString JobID, CString ProcessID, CString Event, long ecode, CString CIndex);
-
 	void SetMaxLogSize(DWORD dwMax) { m_nMaxSize = dwMax; }
 	CString GetPath() const { return m_strLogPath; }
 
@@ -75,12 +82,12 @@ protected:
 	void WriteRaw(LPCTSTR msg);
 
 private:
-	HANDLE    m_hLogMutex;
-	DWORD     m_nMaxSize;
-	BOOL      m_bEnabled;
-	CString   m_strLogPath;
-	UINT      m_nDefaultLevel;
-	UINT      m_nMaskLevel;
+	HANDLE    m_hLogMutex; /**< Mutex protecting log writing */
+	DWORD     m_nMaxSize; /**< Max size of the log file */
+	BOOL      m_bEnabled; /**< Is logging enabled? */
+	CString   m_strLogPath; /**< Full path to log file */
+	UINT      m_nDefaultLevel; /**< Default level for log messages */
+	UINT      m_nMaskLevel; /**< Level to mask messages written to log */
 };
 
 
